<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgconerror"
    tools:context=".Activity.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/InputEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@android:drawable/alert_dark_frame"
            android:hint="@string/rev_mail"
            android:inputType="textEmailAddress"
            android:textSize="24sp"
            android:textStyle="normal|bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/printEmailAndPassword"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="normal|bold"
            app:layout_constraintEnd_toEndOf="@+id/InputEmail"
            app:layout_constraintStart_toStartOf="@+id/InputEmail"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPasswordLayout"
            app:passwordToggleEnabled="true"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/InputEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/InputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/alert_dark_frame"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="24sp"
                android:textStyle="normal|bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/Login_bOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@color/colorWhite"
            android:text="@android:string/ok"
            android:textColor="@color/colorButton"
            android:textSize="20sp"
            android:textStyle="normal|bold"
            app:layout_constraintEnd_toEndOf="@id/etPasswordLayout"
            app:layout_constraintStart_toStartOf="@id/etPasswordLayout"
            app:layout_constraintTop_toBottomOf="@id/etPasswordLayout" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/exit"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            android:textStyle="normal|bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/b_forgot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorWhite"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/forgotpassword"
            android:textColor="@color/colorButton"
            android:textStyle="normal|bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/b_register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Login_bOk" />

        <Button
            android:id="@+id/b_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/colorWhite"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/register"
            android:textColor="@color/colorButton"
            android:textStyle="normal|bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/b_forgot"
            app:layout_constraintTop_toBottomOf="@+id/Login_bOk" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>