<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresh"
        android:layout_width="0dp"
        android:layout_height="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bgfullstori"
            tools:context=".Activity.MessageActivity">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="68dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/b_inputMessage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/style_button"
                    android:text="@string/inputMessage"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/b_sendMessage"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/b_sendMessage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/style_button"
                    android:text="@string/sendMessage"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/b_sendPM"
                    app:layout_constraintStart_toEndOf="@+id/b_inputMessage"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/b_sendPM"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/style_button"
                    android:text="@string/sendPM"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/b_sendMessage"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_message"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:paddingTop="60dp"
                android:scrollbarSize="0dp"
                android:scrollbarThumbHorizontal="@null"
                android:scrollbarThumbVertical="@null"
                android:scrollbarTrackVertical="@null"
                android:scrollbars="none"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />


            <ScrollView
                android:id="@+id/containerMessage"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_centerHorizontal="true"
                android:background="@color/colorButton"
                android:scrollbarSize="0dp"
                android:scrollbarThumbHorizontal="@null"
                android:scrollbarThumbVertical="@null"
                android:scrollbarTrackVertical="@null"
                android:scrollbars="none"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="60dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/name_profile"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:textSize="18sp"
                            android:textStyle="normal|bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/img_profile"
                            app:layout_constraintTop_toTopOf="@+id/img_profile" />

                        <de.hdodenhof.circleimageview.CircleImageView
                            android:id="@+id/img_profile"
                            android:layout_width="90dp"
                            android:layout_height="90dp"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="8dp"
                            app:civ_border_color="@color/colorButton"
                            app:civ_border_width="2dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/textMessage"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="8dp"
                            android:background="@android:drawable/alert_dark_frame"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toEndOf="@+id/img_profile"
                            app:layout_constraintTop_toBottomOf="@+id/name_profile" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <Button
                        android:id="@+id/clouseMessage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        android:background="@drawable/style_button3"
                        android:text="@android:string/ok"
                        android:textSize="18sp"
                        android:textStyle="normal|bold" />


                </LinearLayout>
            </ScrollView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/containerSendMessage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorButton"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/name_send_message"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="68dp"
                    android:layout_marginEnd="8dp"
                    android:background="@android:drawable/alert_dark_frame"
                    android:ems="10"
                    android:hint="@string/komu"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/theme_send_message"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@android:drawable/alert_dark_frame"
                    android:ems="10"
                    android:hint="@string/theme"
                    android:inputType="text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name_send_message" />

                <EditText
                    android:id="@+id/text_send_message"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@android:drawable/alert_dark_frame"
                    android:ems="10"
                    android:hint="@string/text"
                    android:inputType="text"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/theme_send_message" />

                <CheckBox
                    android:id="@+id/saved_messages_for_send"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:hint="@string/saved_messages_for_send"
                    android:theme="@style/AppTheme"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_send_message" />

                <Button
                    android:id="@+id/send_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/style_button3"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/send"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/saved_messages_for_send" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TableRow
                android:id="@+id/tableRow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorMenu"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginLeft="8dp"
                    android:src="@drawable/logo" />

            </TableRow>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/colorMenu"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/menu_header"
        app:itemTextColor="@color/colorWhite"
        app:menu="@menu/menu" />

</androidx.drawerlayout.widget.DrawerLayout>